# cmbdemo

./: .gitignore  DEPLOYMENT.md  README.md  config.yaml  pyproject.toml  requirements.txt
src/cmbdemo/: __init__.py  bigquery.py  config.py  dataplex.py  gcs.py  main.py
src/notebooks/: dataplex_export.ipynb
tests/: test_dataplex_export.py  test_main.py
